--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": ["app/Http/helpers.php"]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
